# fidmaa-gui

./: .gitignore  Makefile  pyproject.toml  setup.cfg  test.py
.github/workflows/: build.yml
src/: application.py
src/fidmaa/: app.py  const.py  core.py  errors.py  form.ui  widget.py
src/fidmaa_gui/: app.py  const.py  entrypoints.py  form.ui  zoom_window.ui
