[tool.poetry]
name = "fidmaa"
version = "0.1.0"
description = "What's FIDMAA?"
authors = ["Michał Pasternak <michal.dtz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
PySide6 = "^6.4.1"
Pillow = "^9.3.0"
opencv-python = "^4.6.0.66"
pyheif = {url = "https://github.com/mpasternak/pyheif/archive/refs/tags/0.7.1-iplweb.zip"}
pi-heif = "^0.8.0"
numpy = "^1.23.5"
piexif = "^1.1.3"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
